Fixing clearfix and image layout issues.

--- a/assets/src/scss/_base_helpers.scss
+++ b/assets/src/scss/_base_helpers.scss
@@ -4,7 +4,8 @@
 
 // Clearing
 %clearfix {
-  &:after {
+  &:after,
+  &:before {
     content: "";
     display: table;
     clear: both;
