--- a/assets/src/scss/_content.scss
+++ b/assets/src/scss/_content.scss
@@ -161,19 +161,12 @@
     @include border-radius();
     display: block;
   }
-  figure,
+  figure.wp-caption {
+    overflow: auto; // Without this the floats won't float
+  }
+  figure.wp-caption,
   img {
-    // Responsive partial-width images rescued from _portfolio.scss
-    &.size-third-width, // Compatibility with old Pendrell styling; may be removed on fresh installs
-    &.size-medium-third,
-    &.size-medium-third-cropped {
-      width: percentage((1-(($spacer/$content-width)*2))/3); // 31.25%
-    }
-    &.size-half-width, // Compatibility with old Pendrell styling; may be removed on fresh installs
-    &.size-medium-half,
-    &.size-medium-half-cropped {
-      width: percentage((1-(($spacer/$content-width)))/2); // 48.4375%
-    }
+    // Responsive margins
     &.alignleft {
       margin-right: percentage($spacer/$content-width);
     }
@@ -183,6 +176,26 @@
     &.alignnone {
       margin-left: 0;
       margin-right: 0;
+    }
+    // Responsive partial-width images rescued from _portfolio.scss
+    &.size-third-width, // Compatibility with old Pendrell styling; may be removed on fresh installs
+    &.size-medium-third,
+    &.size-medium-third-cropped {
+      width: percentage((1-(($spacer/$content-width)*2))/3); // 31.25%
+      &.alignleft:nth-of-type(3),
+        margin-right: 0;
+      }
+    }
+    &.size-half-width, // Compatibility with old Pendrell styling; may be removed on fresh installs
+    &.size-medium-half,
+    &.size-medium-half-cropped {
+      width: percentage((1-(($spacer/$content-width)))/2); // 48.4375%
+      &.alignleft:nth-of-type(2),
+        margin-right: 0;
+      }
+    }
+    & + p {
+      @extend %clearfix;
     }
   }
 
